--- a/app/src/main/res/layout/date_picker_dialog.xml
+++ b/app/src/main/res/layout/date_picker_dialog.xml
@@ -138,11 +138,11 @@
 
         <TextView
             android:id="@+id/date_picker_calendar_time_text"
+            style="@style/Widget.App.TextView.Box"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
-            android:background="@drawable/date_picker_calendar_text_background"
-            android:backgroundTint="?colorSurfaceVariant"
+            android:gravity="center_vertical"
             android:padding="12dp"
             android:text="Выбрать время" />
     </LinearLayout>
@@ -170,11 +170,11 @@
 
         <TextView
             android:id="@+id/date_picker_calendar_repeat_text"
+            style="@style/Widget.App.TextView.Box"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
-            android:background="@drawable/date_picker_calendar_text_background"
-            android:backgroundTint="?colorSurfaceVariant"
+            android:gravity="center_vertical"
             android:padding="12dp"
             android:text="Повторять" />
     </LinearLayout>
