--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="timer_size_big">300dp</dimen>
     <dimen name="repeat_dialog_day_size">32dp</dimen>
+    <dimen name="repeat_dialog_text_field_height">48dp</dimen>
 </resources>
