--- a/app/src/main/res/layout/task_create.xml
+++ b/app/src/main/res/layout/task_create.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/task_create_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -19,8 +20,9 @@
         android:paddingTop="24dp"
         android:paddingEnd="24dp"
         android:paddingBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent" >
-        <requestFocus/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <requestFocus />
     </EditText>
 
     <EditText
@@ -37,6 +39,18 @@
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
         app:layout_constraintTop_toBottomOf="@+id/task_create_edit_text" />
 
+    <!--TODO: chipSurfaceColor & chipSurfaceTintColor-->
+    <com.google.android.material.chip.Chip
+        android:id="@+id/task_create_calendar_chip"
+        style="@style/Widget.Material3.Chip.Input.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:checkable="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_create_description_edit_text"
+        tools:text="Пн, 24 Дек, 13:30" />
+
     <Button
         android:id="@+id/task_create_calendar_button"
         style="@style/Widget.Material3.Button.IconButton"
@@ -44,7 +58,7 @@
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_event_available_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/task_create_description_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/task_create_calendar_chip" />
 
     <Button
         android:id="@+id/task_create_priority_button"
