--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,78 +10,77 @@
         android:id="@+id/tasks_tabs_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:liftOnScroll="true"
+        app:liftOnScrollTargetViewId="@id/tasks_view_pager">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/tasks_tabs_app_bar"
             android:layout_width="match_parent"
-            app:titleCentered="true"
             android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:menu="@menu/tasks_menu"
             app:title="@string/title_tasks"
-            app:menu="@menu/tasks_menu" />
+            app:titleCentered="true" />
+
+        <HorizontalScrollView
+            android:id="@+id/tasks_tabs_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tasks_tab_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tabIndicatorAnimationMode="elastic"
+                    app:tabMode="scrollable"
+                    app:tabPaddingEnd="20dp"
+                    app:tabPaddingStart="20dp"
+                    app:tabRippleColor="@null" />
+
+                <Button
+                    android:id="@+id/tasks_create_tab_button"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/create_tab"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/tasks_tab_layout"
+                    app:layout_constraintStart_toEndOf="@id/tasks_tab_layout" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <HorizontalScrollView
-        android:id="@+id/tasks_tabs_scroll_View"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tasks_tabs_app_bar_layout">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tasks_tab_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tabIndicatorAnimationMode="elastic"
-                app:tabMode="scrollable"
-                app:tabPaddingEnd="20dp"
-                app:tabPaddingStart="20dp"
-                app:tabRippleColor="@null" />
-
-            <Button
-                android:id="@+id/tasks_create_tab_button"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:visibility="gone"
-                android:layout_height="wrap_content"
-                android:text="@string/create_tab"
-                app:layout_constraintBottom_toBottomOf="@id/tasks_tab_layout"
-                app:layout_constraintStart_toEndOf="@id/tasks_tab_layout" />
-        </LinearLayout>
-    </HorizontalScrollView>
 
     <com.google.android.material.divider.MaterialDivider
         style="@style/Widget.Material3.MaterialDivider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerColor="?colorSurfaceVariant"
-        app:layout_constraintBottom_toBottomOf="@id/tasks_tabs_scroll_View"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_anchor="@id/tasks_tabs_app_bar_layout"
+        app:layout_anchorGravity="bottom"
+        android:layout_gravity="top"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/tasks_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layout_constraintTop_toBottomOf="@+id/tasks_tabs_scroll_View" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/tasks_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_24" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
