--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -6,7 +6,7 @@
 
     <data>
 
-        <import type="com.kamil184.focustasks.model.TimerState" />
+        <import type="com.kamil184.focustasks.data.model.TimerState" />
 
         <import type="android.view.View" />
 
