--- a/app/src/main/res/layout/item_completed_tasks_header.xml
+++ b/app/src/main/res/layout/item_completed_tasks_header.xml
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--ConstraintLayout is less productive-->
+<?xml version="1.0" encoding="utf-8"?><!--ConstraintLayout is less productive-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/item_completed_tasks_header_divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:dividerColor="?colorSurfaceVariant" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,9 +21,9 @@
         <TextView
             android:id="@+id/item_completed_tasks_header_text"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:layout_weight="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             tools:text="@string/completed" />
 
@@ -37,37 +37,37 @@
     </LinearLayout>
 </LinearLayout>
 
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/item_completed_tasks_header_divider"
+    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/item_completed_tasks_header_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/completed" />
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/item_completed_tasks_header_divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/item_completed_tasks_header_expand_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_expand_more_24"
-        app:tint="?android:textColorPrimary" />
-</androidx.constraintlayout.widget.ConstraintLayout>-->
+        <TextView
+            android:id="@+id/item_completed_tasks_header_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/completed" />
+
+        <ImageView
+            android:id="@+id/item_completed_tasks_header_expand_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_expand_more_24"
+            app:tint="?android:textColorPrimary" />
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
